@@ -15,6 +15,8 @@
       expected'; see record6.asm.
    -  no warning was emitted if initialized record data items in BSS segments
       were detected; see record7.asm.
+   -  empty record initializer literal may have triggered error "constant
+      value too large" since code wasn't adjusted to 64-bit records yet.
 
    Other changes:
    -  sample Win32_5 updated in manual.html.
